--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,5 +1,2 @@
-project = "your_project_id"
-public_key_path = "~/.ssh/appuser.pub"
-private_key_path = "~/.ssh/appuser"
-disk_image = "reddit-base"
-
+project = "project-id"
+region  = "europe-west3"
