--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -2,7 +2,7 @@
   hosts: app
   become: true
   vars:
-    db_host: 10.132.15.214
+    db_host: "{{ hostvars['reddit-db'].internal_ip }}"
   tasks:
     - name: Add unit file for Puma
       copy:
