add static intentory by default

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./environments/stage/inventory.gcp.yml
+# inventory = ./environments/stage/inventory.gcp.yml # Dynamic Inventory
+inventory = ./environments/stage/inventory # Static Inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
