--- a/ansible/roles/app/handlers/main.yml
+++ b/ansible/roles/app/handlers/main.yml
@@ -1,4 +1,10 @@
 ---
 # handlers file for app
+- name: enable puma
+  systemd: name=puma enabled=yes
+
+- name: start puma
+  systemd: name=puma state=started
+
 - name: reload puma
-  service: name=puma state=restarted
+  systemd: name=puma state=restarted
