--- a/ansible/roles/db/handlers/main.yml
+++ b/ansible/roles/db/handlers/main.yml
@@ -1,4 +1,10 @@
 ---
 # handlers file for db
+- name: enable mongod
+  systemd: name=mongod enabled=yes
+
+- name: start mongod
+  systemd: name=mongod state=started
+
 - name: restart mongod
-  service: name=mongod state=restarted
+  systemd: name=mongod state=restarted
