--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,22 +1,26 @@
 ---
 - name: Deploy app
   hosts: app
-  become: true
   tasks:
+    - name: Install Git
+      become: true
+      apt:
+        name: git
+        state: present
+
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/express42/reddit.git'
-        dest: /home/appuser/reddit
+        dest: "/home/{{ deploy_user }}/reddit"
         version: monolith
       notify: reload puma
 
     - name: Bundle install
       bundler:
         state: present
-        chdir: /home/appuser/reddit
+        chdir: "/home/{{ deploy_user }}/reddit"
 
   handlers:
     - name: reload puma
-      service: name=puma state=restarted
-
-
+      become: true
+      systemd: name=puma state=restarted
