--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -1,11 +1,11 @@
 Vagrant.configure("2") do |config|
 
-  config.vm.provider :docker do |v|
-    #v.memory = 2048
+  config.vm.provider :virtualbox do |v|
+    v.memory = 1024
   end
 
   config.vm.define "dbserver" do |db|
-    db.vm.box = "tknerr/baseimage-ubuntu-16.04"
+    db.vm.box = "ubuntu/xenial64"
     db.vm.hostname = "dbserver"
     db.vm.network :private_network, ip: "10.10.10.10"
 
@@ -19,7 +19,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "appserver" do |app|
-    app.vm.box = "tknerr/baseimage-ubuntu-16.04"
+    app.vm.box = "ubuntu/xenial64"
     app.vm.hostname = "appserver"
     app.vm.network :private_network, ip: "10.10.10.20"
     
